# codetunnel

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: build.yml  deploy-pages.yml
apps/desktop/: CLAUDE.md  index.html  package.json
apps/desktop/scripts/: download-binaries.sh
apps/desktop/src/: App.css  App.jsx  Logo.jsx  index.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/resources/: README.md
apps/desktop/src-tauri/src/: lib.rs  main.rs
docs/: CNAME  SIGNING_KEYS.md  index.html  script.js  style.css
scripts/: build-ttyd-macos-ci.sh  build-ttyd-macos.sh  download-binaries.sh  generate-icons.sh  generate-tauri-keys.sh
src/: App.css  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/macos/: ttyd
src-tauri/src/: lib.rs
